--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,15 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
+		
+
+		<dependency>
+			<groupId>io.hypersistence</groupId>
+			<artifactId>hypersistence-utils-hibernate-63</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
